[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
serde = "1.0.123"
serde_json = "1.0.64"
serde_derive = "1.0.123"
rand = "0.8.3"
regex = "1.4.3"
futures = { version = "0.3.13", features = ["thread-pool"] }
surf = "2.2.0"

[lib]
doctest = false
test = true
